src/compiladordibujos/text.jj

options {
	LOOKAHEAD=3;
	
} 

PARSER_BEGIN(text)
package compiladordibujos;
public class text {
	public static StringBuilder errores;
	public static void error(ParseException ex){
		errores.append("Error de sintaxis en el token: "+ ex.currentToken +
                    " en linea: " + ex.currentToken.beginLine + " columna: " +ex.currentToken.beginColumn +" me saltare a la siguiente etiqueta\n");
		while(!token.image.equals(">")){
			getNextToken();
		}
	}
	public static void main(String args[])throws ParseException{
		try{
			text analizador =new text(System.in);
			analizador.Programa();
			System.out.println("Se a compilado Correctamente");
			
		}catch(ParseException e){
			System.out.println(e.getMessage());
			System.out.println("Ha Ocurrido un error");
		}
	}
}

PARSER_END(text)

TOKEN :
{ 
	<MAIN : "dibujo">{ System.out.println("MAIN -> "+image);}	
	| <CABECERA : "cabecera">{System.out.println("CABECERA -> "+image);}
	| <RECTANGULO  :"rectangulo">{System.out.println("RECTANGULO -> "+image);}
	| <CIRCULO :"circulo">{System.out.println("CIRCULO -> "+image);}
	| <LINEA : "linea">{System.out.println("LINEA-> "+image); }
	| <TEXTO : "texto" | "."| "," >{/*System.out.println("TEXTO -> "+image);*/}
	| <ALTO : "alto">{/*System.out.println("ALTO -> "+image);*/}
	| <ANCHO : "ancho">{/*System.out.println("ANCHO -> "+image);*/}
	| <COLOR : "color">{/*System.out.println("COLOR -> "+image);*/}
	| <POSICION : "posicion">{/*System.out.println("POSICION -> "+image);*/}
	| <RADIO : "radio">{/*System.out.println("RADIO -> " +image);*/}
	| <FONDO : "fondo">{/*System.out.println("FONDO -> "+image);*/}
	| <TIPO : "tipo">{/*System.out.println("TIPO -> "+image);*/}
	| <FUENTE :"fuente">{/*System.out.println("FUENTE -> "+image);*/}
	| <TAM: "tam">{/*System.out.println("TAM -> "+image);*/}
	| <CADENA: "cadena">
}
TOKEN :
{
 <ABREETI : "<">{ /*System.out.println("ABREETI -> "+image);*/}
| <CIERRAETI :">">{/*System.out.println("CIERRAETI -> "+image);*/}
| <CIERRA :"/">{/*System.out.println("CIERRA -> "+image);	*/}
| <POSX : ":x">{/*System.out.println("POSX ->  "+image);	*/}
| <POSY : ":y">{/*System.out.println("POSY -> "+image);*/}
| <POSX2: ":x2">
| <POSY2: ":y2">
}
TOKEN : {
	
	<NUMBER : (["0"-"9"])+ >{System.out.println("NUMERO ->  "+image);}
	| <TEXT : (["a"-"z","A"-"Z"])+ >{System.out.println("TEXTO ->  "+image);}
}

SKIP : {
		" "|"\r"|"\t"|"\n"
	}

Dibujo Programa () :
{
	Dibujo dibujo=new Dibujo();
	errores= new StringBuilder();
}
{
	<ABREETI><MAIN><CIERRAETI>
		(
			<ABREETI><CABECERA><CIERRAETI>
				Cabecera(dibujo)
			<ABREETI><CIERRA><CABECERA><CIERRAETI>
		)*
		dibujo=Principal(dibujo)
	<ABREETI><CIERRA><MAIN><CIERRAETI><EOF> {return dibujo; }
}
Dibujo Principal(Dibujo dibujo) :
{
	
}
{
	(
		<ABREETI><RECTANGULO><CIERRAETI> { Rectangulo rect= new Rectangulo(); }
			Atributos(rect) 
		<ABREETI><CIERRA><RECTANGULO><CIERRAETI> { 
			System.out.println("Se encontro un rectangulo"); 
			dibujo.agregarDibujable(rect);
		}
		|<ABREETI><CIRCULO><CIERRAETI> { Circulo circ= new Circulo(); }
			Atributos(circ)
		<ABREETI><CIERRA><CIRCULO><CIERRAETI>{
			System.out.println("Se encontro un circulo"); 
			dibujo.agregarDibujable(circ);
		}
		|<ABREETI><LINEA><CIERRAETI> {Linea lin= new Linea(); }
			Atributos(lin)
		<ABREETI><CIERRA><LINEA><CIERRAETI>{
			System.out.println("Se encontro una linea");
			dibujo.agregarDibujable(lin);
		}



               |<ABREETI><TEXTO><CIERRAETI>{Texto texto=new Texto();}
                            Atributos(texto)
                        <ABREETI><CIERRA><TEXTO><CIERRAETI>{
                         System.out.println("Se encontro un TEXTO");
			dibujo.agregarDibujable(texto);
                }
	)*
	{ 
		return dibujo;
	
	}
}	
void Atributos(Dibujable d):
{
	Token t;
	String cad;
}
{     
	(
	try{
		<ABREETI><ALTO><CIERRAETI>
			t=<NUMBER>  { d.setAlto( Integer.parseInt(t.toString()) ); }
		<ABREETI><CIERRA><ALTO><CIERRAETI> 
		
		|<ABREETI><ANCHO><CIERRAETI>
			t=<NUMBER>  { d.setAncho( Integer.parseInt(t.toString()) );}
		<ABREETI><CIERRA><ANCHO><CIERRAETI>
		
		|<ABREETI><POSICION><POSX><CIERRAETI>
			t=<NUMBER>  { d.setX( Integer.parseInt(t.toString())); }
		<ABREETI><CIERRA><POSICION><POSX><CIERRAETI>
		
		|<ABREETI><POSICION><POSY><CIERRAETI>
			t=<NUMBER>  { d.setY( Integer.parseInt(t.toString())); }
		<ABREETI><CIERRA><POSICION><POSY><CIERRAETI>
		
		|<ABREETI><COLOR><CIERRAETI>
			cad=cadena()  { d.setColor(cad); System.out.println("Se asigno el color " +cad); }
		<ABREETI><CIERRA><COLOR><CIERRAETI>
		
		|<ABREETI><RADIO><CIERRAETI>
			t=<NUMBER> {
				if( d instanceof Circulo ){
					((Circulo)d).setRadio(Integer.parseInt(t.toString()));
				}else System.out.println("Se encontro una etiqueta de radio en una figura que no es un circulo, sera ignorada"); 
			}
		<ABREETI><CIERRA><RADIO><CIERRAETI> 
		
		|<ABREETI><POSICION><POSX2><CIERRAETI>
			t=<NUMBER> {
				d.setAncho( Integer.parseInt(t.toString()));		
				if(! (d instanceof Linea)) System.out.println("Este elemento no lleva el atributo x2, se tomara como ancho");
			}
		<ABREETI><CIERRA><POSICION><POSX2><CIERRAETI>
		
		|<ABREETI><POSICION><POSY2><CIERRAETI>
			t=<NUMBER> {
				d.setAlto( Integer.parseInt(t.toString()));			
				if(! (d instanceof Linea)) System.out.println("Este elemento no lleva el atributo y2, se tomara como alto");
			}
		<ABREETI><CIERRA><POSICION><POSY2><CIERRAETI>
		|<ABREETI><TAM><CIERRAETI>
			t=<NUMBER> {
				if(d instanceof Texto){
					((Texto)d).setTam(Integer.parseInt(t.toString()));
                }else {
					System.out.println("Se encontro la etiqueta tam en un objeto que no es texto, sera ignorada");
				}
			}
		<ABREETI><CIERRA><TAM><CIERRAETI> 
		|<ABREETI><FONDO><CIERRAETI>
			t=<TEXT> {
				boolean f= (t.toString().equals("si") || t.toString().equals("1")) ? true: false;
				if( d instanceof Circulo){
					((Circulo)d).setFondo(f);
				} else if(d instanceof Rectangulo){
					((Rectangulo)d).setFondo(f);
				}else {
					System.out.println("Etiqueta fondo no tiene efecto sobre este objeto"); 
				}
			}
		<ABREETI><CIERRA><FONDO><CIERRAETI> 
		|<ABREETI><FUENTE><CIERRAETI>
			cad= cadena() { 
				if(d instanceof Texto){
					((Texto)d).setFuente(cad);
                }else {
					System.out.println("Se encontro la etiqueta fuente en un objeto que no es texto, sera ignorada");
				}
			
			}
		<ABREETI><CIERRA><FUENTE><CIERRAETI>
		|<ABREETI><TIPO><CIERRAETI>
			cad= cadena(){
				if(d instanceof Texto){
					((Texto)d).setTipo(cad);
                }else {
					System.out.println("Se encontro la etiqueta tipo en un objeto que no es texto, sera ignorada");
				}
			}
		<ABREETI><CIERRA><TIPO><CIERRAETI> 
		| <ABREETI><CADENA><CIERRAETI>
			cad= cadena(){
				if(d instanceof Texto){
					((Texto)d).setTexto(cad);
                }else {
					System.out.println("Se encontro la etiqueta cadena en un objeto que no es texto, sera ignorada");
				}
			}
		<ABREETI><CIERRA><CADENA><CIERRAETI> 
	}catch(ParseException ex){
			error(ex);
	}
	)+ 
}
void Cabecera(Dibujo d):
{
	Token t;
	String f;
}
{
	(
		try{
			<ABREETI><ALTO><CIERRAETI>
				t=<NUMBER> {d.setAlto(Integer.parseInt(t.toString())); }
			<ABREETI><CIERRA><ALTO><CIERRAETI>
			|<ABREETI><ANCHO><CIERRAETI>
				t=<NUMBER>{d.setAncho(Integer.parseInt(t.toString())); }
			<ABREETI><CIERRA><ANCHO><CIERRAETI>
			|<ABREETI><FONDO><CIERRAETI>
				f=cadena() { d.setFondo(f); }
			<ABREETI><CIERRA><FONDO><CIERRAETI>
		}catch(ParseException ex){
			error(ex);
		}
	)*
}
String cadena():
{
	StringBuilder cad= new StringBuilder();
	Token t= new Token(1,"");
}
{
	(
		t=<TEXT> { cad.append(t.toString()).append(" "); }
		| ":" (t=<TEXT>)*{ cad.append(":").append(t.toString()+" "); }
	)* 
	{ 
		if(cad.length()>0)
			cad.deleteCharAt(cad.length()-1);
		return cad.toString();
	}
}
