src/compiladordibujos/text.java
/* text.java */
/* Generated By:JavaCC: Do not edit this line. text.java */
package compiladordibujos;
public class text implements textConstants {
        public static StringBuilder errores;
        public static void error(ParseException ex){
                errores.append("Error de sintaxis en el token: "+ ex.currentToken +
                    " en linea: " + ex.currentToken.beginLine + " columna: " +ex.currentToken.beginColumn +" me saltare a la siguiente etiqueta\u005cn");
                while(!token.image.equals(">")){
                        getNextToken();
                }
        }
        public static void main(String args[])throws ParseException{
                try{
                        text analizador =new text(System.in);
                        analizador.Programa();
                        System.out.println("Se a compilado Correctamente");

                }catch(ParseException e){
                        System.out.println(e.getMessage());
                        System.out.println("Ha Ocurrido un error");
                }
        }

  static final public Dibujo Programa() throws ParseException {Dibujo dibujo=new Dibujo();
        errores= new StringBuilder();
    jj_consume_token(ABREETI);
    jj_consume_token(MAIN);
    jj_consume_token(CIERRAETI);
    label_1:
    while (true) {
      if (jj_2_1(3)) {
        ;
      } else {
        break label_1;
      }
      jj_consume_token(ABREETI);
      jj_consume_token(CABECERA);
      jj_consume_token(CIERRAETI);
      Cabecera(dibujo);
      jj_consume_token(ABREETI);
      jj_consume_token(CIERRA);
      jj_consume_token(CABECERA);
      jj_consume_token(CIERRAETI);
    }
    dibujo = Principal(dibujo);
    jj_consume_token(ABREETI);
    jj_consume_token(CIERRA);
    jj_consume_token(MAIN);
    jj_consume_token(CIERRAETI);
    jj_consume_token(0);
{if ("" != null) return dibujo;}
    throw new Error("Missing return statement in function");
  }

  static final public Dibujo Principal(Dibujo dibujo) throws ParseException {
    label_2:
    while (true) {
      if (jj_2_2(3)) {
        ;
      } else {
        break label_2;
      }
      if (jj_2_3(3)) {
        jj_consume_token(ABREETI);
        jj_consume_token(RECTANGULO);
        jj_consume_token(CIERRAETI);
Rectangulo rect= new Rectangulo();
        Atributos(rect);
        jj_consume_token(ABREETI);
        jj_consume_token(CIERRA);
        jj_consume_token(RECTANGULO);
        jj_consume_token(CIERRAETI);
System.out.println("Se encontro un rectangulo");
                        dibujo.agregarDibujable(rect);
      } else if (jj_2_4(3)) {
        jj_consume_token(ABREETI);
        jj_consume_token(CIRCULO);
        jj_consume_token(CIERRAETI);
Circulo circ= new Circulo();
        Atributos(circ);
        jj_consume_token(ABREETI);
        jj_consume_token(CIERRA);
        jj_consume_token(CIRCULO);
        jj_consume_token(CIERRAETI);
System.out.println("Se encontro un circulo");
                        dibujo.agregarDibujable(circ);
      } else if (jj_2_5(3)) {
        jj_consume_token(ABREETI);
        jj_consume_token(LINEA);
        jj_consume_token(CIERRAETI);
Linea lin= new Linea();
        Atributos(lin);
        jj_consume_token(ABREETI);
        jj_consume_token(CIERRA);
        jj_consume_token(LINEA);
        jj_consume_token(CIERRAETI);
System.out.println("Se encontro una linea");
                        dibujo.agregarDibujable(lin);
      } else if (jj_2_6(3)) {
        jj_consume_token(ABREETI);
        jj_consume_token(TEXTO);
        jj_consume_token(CIERRAETI);
Texto texto=new Texto();
        Atributos(texto);
        jj_consume_token(ABREETI);
        jj_consume_token(CIERRA);
        jj_consume_token(TEXTO);
        jj_consume_token(CIERRAETI);
System.out.println("Se encontro un TEXTO");
                        dibujo.agregarDibujable(texto);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return dibujo;}
    throw new Error("Missing return statement in function");
  }

  static final public void Atributos(Dibujable d) throws ParseException {Token t;
        String cad;
    label_3:
    while (true) {
      try {
        if (jj_2_7(3)) {
          jj_consume_token(ABREETI);
          jj_consume_token(ALTO);
          jj_consume_token(CIERRAETI);
          t = jj_consume_token(NUMBER);
d.setAlto( Integer.parseInt(t.toString()) );
          jj_consume_token(ABREETI);
          jj_consume_token(CIERRA);
          jj_consume_token(ALTO);
          jj_consume_token(CIERRAETI);
        } else if (jj_2_8(3)) {
          jj_consume_token(ABREETI);
          jj_consume_token(ANCHO);
          jj_consume_token(CIERRAETI);
          t = jj_consume_token(NUMBER);
d.setAncho( Integer.parseInt(t.toString()) );
          jj_consume_token(ABREETI);
          jj_consume_token(CIERRA);
          jj_consume_token(ANCHO);
          jj_consume_token(CIERRAETI);
        } else if (jj_2_9(3)) {
          jj_consume_token(ABREETI);
          jj_consume_token(POSICION);
          jj_consume_token(POSX);
          jj_consume_token(CIERRAETI);
          t = jj_consume_token(NUMBER);
d.setX( Integer.parseInt(t.toString()));
          jj_consume_token(ABREETI);
          jj_consume_token(CIERRA);
          jj_consume_token(POSICION);
          jj_consume_token(POSX);
          jj_consume_token(CIERRAETI);
        } else if (jj_2_10(3)) {
          jj_consume_token(ABREETI);
          jj_consume_token(POSICION);
          jj_consume_token(POSY);
          jj_consume_token(CIERRAETI);
          t = jj_consume_token(NUMBER);
d.setY( Integer.parseInt(t.toString()));
          jj_consume_token(ABREETI);
          jj_consume_token(CIERRA);
          jj_consume_token(POSICION);
          jj_consume_token(POSY);
          jj_consume_token(CIERRAETI);
        } else if (jj_2_11(3)) {
          jj_consume_token(ABREETI);
          jj_consume_token(COLOR);
          jj_consume_token(CIERRAETI);
          cad = cadena();
d.setColor(cad); System.out.println("Se asigno el color " +cad);
          jj_consume_token(ABREETI);
          jj_consume_token(CIERRA);
          jj_consume_token(COLOR);
          jj_consume_token(CIERRAETI);
        } else if (jj_2_12(3)) {
          jj_consume_token(ABREETI);
          jj_consume_token(RADIO);
          jj_consume_token(CIERRAETI);
          t = jj_consume_token(NUMBER);
if( d instanceof Circulo ){
                                        ((Circulo)d).setRadio(Integer.parseInt(t.toString()));
                                }else System.out.println("Se encontro una etiqueta de radio en una figura que no es un circulo, sera ignorada");
          jj_consume_token(ABREETI);
          jj_consume_token(CIERRA);
          jj_consume_token(RADIO);
          jj_consume_token(CIERRAETI);
        } else if (jj_2_13(3)) {
          jj_consume_token(ABREETI);
          jj_consume_token(POSICION);
          jj_consume_token(POSX2);
          jj_consume_token(CIERRAETI);
          t = jj_consume_token(NUMBER);
d.setAncho( Integer.parseInt(t.toString()));
                                if(! (d instanceof Linea)) System.out.println("Este elemento no lleva el atributo x2, se tomara como ancho");
          jj_consume_token(ABREETI);
          jj_consume_token(CIERRA);
          jj_consume_token(POSICION);
          jj_consume_token(POSX2);
          jj_consume_token(CIERRAETI);
        } else if (jj_2_14(3)) {
          jj_consume_token(ABREETI);
          jj_consume_token(POSICION);
          jj_consume_token(POSY2);
          jj_consume_token(CIERRAETI);
          t = jj_consume_token(NUMBER);
d.setAlto( Integer.parseInt(t.toString()));
                                if(! (d instanceof Linea)) System.out.println("Este elemento no lleva el atributo y2, se tomara como alto");
          jj_consume_token(ABREETI);
          jj_consume_token(CIERRA);
          jj_consume_token(POSICION);
          jj_consume_token(POSY2);
          jj_consume_token(CIERRAETI);
        } else if (jj_2_15(3)) {
          jj_consume_token(ABREETI);
          jj_consume_token(TAM);
          jj_consume_token(CIERRAETI);
          t = jj_consume_token(NUMBER);
if(d instanceof Texto){
                                        ((Texto)d).setTam(Integer.parseInt(t.toString()));
                }else {
                                        System.out.println("Se encontro la etiqueta tam en un objeto que no es texto, sera ignorada");
                                }
          jj_consume_token(ABREETI);
          jj_consume_token(CIERRA);
          jj_consume_token(TAM);
          jj_consume_token(CIERRAETI);
        } else if (jj_2_16(3)) {
          jj_consume_token(ABREETI);
          jj_consume_token(FONDO);
          jj_consume_token(CIERRAETI);
          t = jj_consume_token(TEXT);
boolean f= (t.toString().equals("si") || t.toString().equals("1")) ? true: false;
                                if( d instanceof Circulo){
                                        ((Circulo)d).setFondo(f);
                                } else if(d instanceof Rectangulo){
                                        ((Rectangulo)d).setFondo(f);
                                }else {
                                        System.out.println("Etiqueta fondo no tiene efecto sobre este objeto");
                                }
          jj_consume_token(ABREETI);
          jj_consume_token(CIERRA);
          jj_consume_token(FONDO);
          jj_consume_token(CIERRAETI);
        } else if (jj_2_17(3)) {
          jj_consume_token(ABREETI);
          jj_consume_token(FUENTE);
          jj_consume_token(CIERRAETI);
          cad = cadena();
if(d instanceof Texto){
                                        ((Texto)d).setFuente(cad);
                }else {
                                        System.out.println("Se encontro la etiqueta fuente en un objeto que no es texto, sera ignorada");
                                }
          jj_consume_token(ABREETI);
          jj_consume_token(CIERRA);
          jj_consume_token(FUENTE);
          jj_consume_token(CIERRAETI);
        } else if (jj_2_18(3)) {
          jj_consume_token(ABREETI);
          jj_consume_token(TIPO);
          jj_consume_token(CIERRAETI);
          cad = cadena();
if(d instanceof Texto){
                                        ((Texto)d).setTipo(cad);
                }else {
                                        System.out.println("Se encontro la etiqueta tipo en un objeto que no es texto, sera ignorada");
                                }
          jj_consume_token(ABREETI);
          jj_consume_token(CIERRA);
          jj_consume_token(TIPO);
          jj_consume_token(CIERRAETI);
        } else if (jj_2_19(3)) {
          jj_consume_token(ABREETI);
          jj_consume_token(CADENA);
          jj_consume_token(CIERRAETI);
          cad = cadena();
if(d instanceof Texto){
                                        ((Texto)d).setTexto(cad);
                }else {
                                        System.out.println("Se encontro la etiqueta cadena en un objeto que no es texto, sera ignorada");
                                }
          jj_consume_token(ABREETI);
          jj_consume_token(CIERRA);
          jj_consume_token(CADENA);
          jj_consume_token(CIERRAETI);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (ParseException ex) {
error(ex);
      }
      if (jj_2_20(3)) {
        ;
      } else {
        break label_3;
      }
    }
  }

  static final public void Cabecera(Dibujo d) throws ParseException {Token t;
        String f;
    label_4:
    while (true) {
      if (jj_2_21(3)) {
        ;
      } else {
        break label_4;
      }
      try {
        if (jj_2_22(3)) {
          jj_consume_token(ABREETI);
          jj_consume_token(ALTO);
          jj_consume_token(CIERRAETI);
          t = jj_consume_token(NUMBER);
d.setAlto(Integer.parseInt(t.toString()));
          jj_consume_token(ABREETI);
          jj_consume_token(CIERRA);
          jj_consume_token(ALTO);
          jj_consume_token(CIERRAETI);
        } else if (jj_2_23(3)) {
          jj_consume_token(ABREETI);
          jj_consume_token(ANCHO);
          jj_consume_token(CIERRAETI);
          t = jj_consume_token(NUMBER);
d.setAncho(Integer.parseInt(t.toString()));
          jj_consume_token(ABREETI);
          jj_consume_token(CIERRA);
          jj_consume_token(ANCHO);
          jj_consume_token(CIERRAETI);
        } else if (jj_2_24(3)) {
          jj_consume_token(ABREETI);
          jj_consume_token(FONDO);
          jj_consume_token(CIERRAETI);
          f = cadena();
d.setFondo(f);
          jj_consume_token(ABREETI);
          jj_consume_token(CIERRA);
          jj_consume_token(FONDO);
          jj_consume_token(CIERRAETI);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (ParseException ex) {
error(ex);
      }
    }
  }

  static final public String cadena() throws ParseException {StringBuilder cad= new StringBuilder();
        Token t= new Token(1,"");
    label_5:
    while (true) {
      if (jj_2_25(3)) {
        ;
      } else {
        break label_5;
      }
      if (jj_2_27(3)) {
        t = jj_consume_token(TEXT);
cad.append(t.toString()).append(" ");
      } else if (jj_2_28(3)) {
        jj_consume_token(30);
        label_6:
        while (true) {
          if (jj_2_26(3)) {
            ;
          } else {
            break label_6;
          }
          t = jj_consume_token(TEXT);
        }
cad.append(":").append(t.toString()+" ");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
if(cad.length()>0)
                        cad.deleteCharAt(cad.length()-1);
                {if ("" != null) return cad.toString();}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_3_19()
 {
    if (jj_scan_token(ABREETI)) return true;
    if (jj_scan_token(CADENA)) return true;
    if (jj_scan_token(CIERRAETI)) return true;
    return false;
  }

  static private boolean jj_3_14()
 {
    if (jj_scan_token(ABREETI)) return true;
    if (jj_scan_token(POSICION)) return true;
    if (jj_scan_token(POSY2)) return true;
    return false;
  }

  static private boolean jj_3_28()
 {
    if (jj_scan_token(30)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_26()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_27()
 {
    if (jj_scan_token(TEXT)) return true;
    return false;
  }

  static private boolean jj_3_25()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_27()) {
    jj_scanpos = xsp;
    if (jj_3_28()) return true;
    }
    return false;
  }

  static private boolean jj_3_13()
 {
    if (jj_scan_token(ABREETI)) return true;
    if (jj_scan_token(POSICION)) return true;
    if (jj_scan_token(POSX2)) return true;
    return false;
  }

  static private boolean jj_3_6()
 {
    if (jj_scan_token(ABREETI)) return true;
    if (jj_scan_token(TEXTO)) return true;
    if (jj_scan_token(CIERRAETI)) return true;
    return false;
  }

  static private boolean jj_3_18()
 {
    if (jj_scan_token(ABREETI)) return true;
    if (jj_scan_token(TIPO)) return true;
    if (jj_scan_token(CIERRAETI)) return true;
    return false;
  }

  static private boolean jj_3_24()
 {
    if (jj_scan_token(ABREETI)) return true;
    if (jj_scan_token(FONDO)) return true;
    if (jj_scan_token(CIERRAETI)) return true;
    return false;
  }

  static private boolean jj_3_23()
 {
    if (jj_scan_token(ABREETI)) return true;
    if (jj_scan_token(ANCHO)) return true;
    if (jj_scan_token(CIERRAETI)) return true;
    return false;
  }

  static private boolean jj_3_12()
 {
    if (jj_scan_token(ABREETI)) return true;
    if (jj_scan_token(RADIO)) return true;
    if (jj_scan_token(CIERRAETI)) return true;
    return false;
  }

  static private boolean jj_3_5()
 {
    if (jj_scan_token(ABREETI)) return true;
    if (jj_scan_token(LINEA)) return true;
    if (jj_scan_token(CIERRAETI)) return true;
    return false;
  }

  static private boolean jj_3_22()
 {
    if (jj_scan_token(ABREETI)) return true;
    if (jj_scan_token(ALTO)) return true;
    if (jj_scan_token(CIERRAETI)) return true;
    return false;
  }

  static private boolean jj_3_11()
 {
    if (jj_scan_token(ABREETI)) return true;
    if (jj_scan_token(COLOR)) return true;
    if (jj_scan_token(CIERRAETI)) return true;
    return false;
  }

  static private boolean jj_3_17()
 {
    if (jj_scan_token(ABREETI)) return true;
    if (jj_scan_token(FUENTE)) return true;
    if (jj_scan_token(CIERRAETI)) return true;
    return false;
  }

  static private boolean jj_3_4()
 {
    if (jj_scan_token(ABREETI)) return true;
    if (jj_scan_token(CIRCULO)) return true;
    if (jj_scan_token(CIERRAETI)) return true;
    return false;
  }

  static private boolean jj_3_10()
 {
    if (jj_scan_token(ABREETI)) return true;
    if (jj_scan_token(POSICION)) return true;
    if (jj_scan_token(POSY)) return true;
    return false;
  }

  static private boolean jj_3_9()
 {
    if (jj_scan_token(ABREETI)) return true;
    if (jj_scan_token(POSICION)) return true;
    if (jj_scan_token(POSX)) return true;
    return false;
  }

  static private boolean jj_3_21()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_22()) {
    jj_scanpos = xsp;
    if (jj_3_23()) {
    jj_scanpos = xsp;
    if (jj_3_24()) return true;
    }
    }
    return false;
  }
